--- a/android-alert/src/main/res/layout/alert_dialog_content.xml
+++ b/android-alert/src/main/res/layout/alert_dialog_content.xml
@@ -21,11 +21,11 @@
         android:layout_height="wrap_content"
         android:background="@drawable/alert_dialog_bg"
         android:orientation="vertical"
-        android:id="@+id/cus_dialog_container"
+        android:id="@+id/alert_dialog_container"
         android:paddingTop="20dip" >
 
         <TextView
-            android:id="@+id/cus_dialog_title"
+            android:id="@+id/alert_dialog_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
